@@ -9,14 +9,14 @@
 
 module Wrest::Native
   module ConnectionFactory
-    def create_connection(options = {:timeout => 60, :verify_mode => 'VERIFY_PEER'})
+    def create_connection(options = {:timeout => 60, :verify_mode => OpenSSL::SSL::VERIFY_NONE})
       options[:timeout] ||= 60
       connection = Net::HTTP.new(self.host, self.port)
       connection.read_timeout = options[:timeout]
       if self.https?
         connection.use_ssl     = true
-        connection.verify_mode = OpenSSL::SSL::VERIFY_PEER
-        connection.verify_mode = OpenSSL::SSL::VERIFY_NONE if options[:verify_mode] == 'VERIFY_NONE'
+        connection.verify_mode = options[:verify_mode]? options[:verify_mode] : OpenSSL::SSL::VERIFY_PEER 
+        
       end
       connection
     end
