@@ -1,5 +1,6 @@
 require "spec_helper"
 
+
 unless RUBY_PLATFORM =~ /java/
   module Wrest
     describe Curl::Request do
@@ -22,7 +23,6 @@ unless RUBY_PLATFORM =~ /java/
             Wrest::Curl::Request.new('http://localhost:3000/two_seconds'.to_uri, :get, {}, '', {}, :timeout => 1).invoke 
           }.should raise_error(Wrest::Exceptions::Timeout)
         end
-
       end
 
       after :all do
