@@ -9,7 +9,7 @@ Features under a numbered section are complete and available in the Wrest gem.
  * Multi-part post support on curl
  
 == In progress
- * 304/ETag response caching
+ * 304/ETag response caching 
  * Keep-alive support for libcurl
  * Explicit cookie helpers - #cookie=, #cookie?
  * Response code checkers: ok?, redirect?, created? etc.
@@ -20,7 +20,8 @@ Features under a numbered section are complete and available in the Wrest gem.
  * GH#24 Add support for xpath based filtering of xml response bodies to the response chain
  * GH#46 Response.deserialise for Json responses
  * GH#52 Wrest console (bin/wrest) fails on 1.9.2
-
+ * GH#55 Fix connection.verify_mode for Net::HTTP https connection to VERIFY_PEER
+ * GH#57 Feature #24 doesn't autoload correctly
 == 1.0.0.beta7
  * GH#46 Response.deserialise for Json responses
 
